--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
     <artifactId>poi</artifactId>
     <version>4.1.1</version>
 </dependency>
+		        <dependency>   
+            <groupId>org.seleniumhq.selenium</groupId>   
+            <artifactId>selenium-chrome-driver</artifactId>   
+            <version>2.53.0</version>   
+        </dependency>   
+        <dependency>   
+            <groupId>io.github.bonigarcia</groupId>    
+            <artifactId>webdrivermanager</artifactId>   
+            <version>1.4.5</version>    
+        </dependency> 
 
 	</dependencies>
 	
