--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,10 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+
+- task: DownloadGitHubRelease@0
+  inputs:
+    connection: 'harvesh123'
+    userRepository: 'https://github.com/harvesh123/SeleniumFramework.git'
+    defaultVersionType: 'latest'
+    downloadPath: '$(System.ArtifactsDirectory)'
